--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>Playing with Chaos</title>
+    <style>
+      html, body { margin: 0; }
+      canvas { display: block; }
+    </style>
   </head>
   <body>
+    <div>
+      <canvas id="canvas"></canvas>
+    </div>
+
     <script src="js/main.js"></script>
     <!-- @if APP_DEV -->
     <script src="http://localhost:35729/livereload.js"></script>
