Use folders for projects

--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="utf-8">
     <title>Playing with Chaos</title>
     <style>
-      html, body { margin: 0; }
+      html, body {
+        margin: 0;
+        font-family: Georgia, Times, "Times New Roman", serif;
+        font-size: 14px;
+        line-height: 1.5em;
+      }
       canvas { display: block; }
+      a      { font-style: italic; color: hsl(240, 80%, 70%); }
+      ol     { list-style-type: decimal-leading-zero; }
     </style>
   </head>
   <body>
-    <div>
-      <canvas id="canvas"></canvas>
-    </div>
+    <ol>
+      <li>
+        <a href="projects/sample">Sample (drawning rectangles)</a>
+      </li>
+    </ol>
 
-    <script src="js/main.js"></script>
     <!-- @if APP_DEV -->
     <script src="http://localhost:35729/livereload.js"></script>
     <!-- @endif -->
