Add sierpinski's gasket

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
       <li>
         <a href="projects/sample">Sample (drawning rectangles)</a>
       </li>
+      <li>
+        <a href="projects/sierpinski">The Sierpinski Gasket</a>
+      </li>
     </ol>
 
     <!-- @if APP_DEV -->
