--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
       <li>
         <a href="projects/sierpinski">The Sierpinski Gasket</a>
       </li>
+      <li>
+        <a href="projects/koch-curve">Koch Curve</a>
+      </li>
     </ol>
 
     <!-- @if APP_DEV -->
